--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,15 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "graphql": "^16.4.0",
     "graphql-tag": "^2.12.6",
     "jwt-decode": "^3.1.2",
+    "mapbox-gl": "^2.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.1.0",
+    "react-map-gl": "^7.0.11",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
