--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/bbox": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "graphql": "^16.4.0",
@@ -20,6 +23,7 @@
     "react-map-gl": "^7.0.11",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
