--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@apollo/client": "^3.6.1",
     "@apollo/react-hooks": "^4.0.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@turf/bbox": "^6.5.0",
+    "@turf/buffer": "^6.5.0",
+    "@turf/collect": "^6.5.0",
     "@turf/helpers": "^6.5.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
