--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,13 @@
   "dependencies": {
     "@apollo/client": "^3.6.1",
     "@apollo/react-hooks": "^4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mapbox/mapbox-gl-geocoder": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "@turf/bbox": "^6.5.0",
-    "@turf/buffer": "^6.5.0",
-    "@turf/collect": "^6.5.0",
-    "@turf/helpers": "^6.5.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "graphql": "^16.4.0",
